# DoomsdayTrainer

./: .clang-format  CMakeLists.txt  CMakePresets.json  README.md
doomsday_method/: CMakeLists.txt
doomsday_method/include/doomsday_method/: doomsday_method.h
doomsday_method/src/: doomsday_method.cpp
doomsday_method/test/: doomsday_method_tests.cpp
